# Qt-Cpp-ERP-Connected-Edge-Telemetry-with-Serial-COM-Aggregation-SQLite-Caching-and-Cloud-Control

./: README.md
source/: CMakeLists.txt  comportmanager.cpp  comportmanager.h  comthread.cpp  comthread.h  dvclient.cpp  dvclient.h  main.cpp  mainwindow.cpp  mainwindow.h  scatter3dwidget.cpp  scatter3dwidget.h
